--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.4",
     "i": "^0.3.7",
     "npm": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
