--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^14.3.2",
     "firebase": "^9.6.4",
     "i": "^0.3.7",
     "npm": "^8.3.2",
