--- a/client/package.json
+++ b/client/package.json
@@ -51,8 +51,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.17"
+    "autoprefixer": "^10.4.2"
   }
 }
