--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "mercadopago": "^1.5.12",
     "npm": "^8.3.2",
     "react": "^17.0.2",
+    "react-chatbot-kit": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
     "react-redux": "^7.2.6",
